pong/deploy/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pong
spec:
  rules:
  - host: pong
    http:
      paths:
      - backend:
          serviceName: pong
          servicePort: 8080
